[tool.poetry]
name = "clover-ui"
version = "0.1.0"
description = "A web app for visualising transactions"
authors = ["martinabeleda <martin.abeleda@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
dash = "^1.11.0"
dash-core-components = "^1.9.1"
dash-html-components = "^1.0.3"
dash-table = "^4.6.2"
dash-bootstrap-components = "^0.9.2"
retrying = "^1.3.3"
requests = "^2.23.0"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
black = "^19.10b0"
pylint = "^2.4.4"
pre-commit = "^2.2.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
